# spatialite

./: CMakeLists.txt  README.md  configure.ac
cmake/: FindExtEXPAT.cmake  FindExtICONV.cmake  FindExtLIBXML2.cmake  FindExtProject.cmake  FindExtSPATIALITE.cmake  FindExtSQLite3.cmake  util.cmake
opt/: folders.csv  postprocess.py  spatialite_dem.patch  spatialite_xml_load.patch  spatialite_xml_print.patch
src/: CMakeLists.txt
src/exif_loader/: CMakeLists.txt  exif_loader.c
src/shp_doctor/: CMakeLists.txt  shp_doctor.c
src/shp_sanitize/: CMakeLists.txt  shp_sanitize.c
src/spatialite/: CMakeLists.txt  shell.c
src/spatialite_convert/: CMakeLists.txt  spatialite_convert.c
src/spatialite_dem/: CMakeLists.txt  spatialite_dem.c
src/spatialite_dxf/: CMakeLists.txt  spatialite_dxf.c
src/spatialite_gml/: CMakeLists.txt  spatialite_gml.c
src/spatialite_network/: CMakeLists.txt  spatialite_network.c
src/spatialite_osm_filter/: CMakeLists.txt  spatialite_osm_filter.c
src/spatialite_osm_overpass/: CMakeLists.txt  spatialite_osm_overpass.c
src/spatialite_tool/: CMakeLists.txt  spatialite_tool.c
src/spatialite_xml2utf8/: CMakeLists.txt  spatialite_xml2utf8.c
src/spatialite_xml_collapse/: CMakeLists.txt  spatialite_xml_collapse.c
src/spatialite_xml_load/: CMakeLists.txt  spatialite_xml_load.c
src/spatialite_xml_print/: CMakeLists.txt  spatialite_xml_print.c
src/spatialite_xml_validator/: CMakeLists.txt  spatialite_xml_validator.c
