################################################################################
# Copyright (C) 2021, NextGIS <info@nextgis.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
# OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.
################################################################################

add_subdirectory(exif_loader)
add_subdirectory(shp_doctor)
add_subdirectory(shp_sanitize)
add_subdirectory(spatialite)
add_subdirectory(spatialite_convert)
add_subdirectory(spatialite_dem)
add_subdirectory(spatialite_dxf)
add_subdirectory(spatialite_gml)
add_subdirectory(spatialite_network)
add_subdirectory(spatialite_osm_filter)
add_subdirectory(spatialite_osm_overpass)
add_subdirectory(spatialite_tool)
add_subdirectory(spatialite_xml_collapse)
add_subdirectory(spatialite_xml_load)
add_subdirectory(spatialite_xml_print)
add_subdirectory(spatialite_xml_validator)
add_subdirectory(spatialite_xml2utf8)